--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -1,141 +1,151 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <!-- MUST be first -->
+  <configSections>
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System.Configuration.ConfigurationManager">
+      <section name="UnityLauncherPro.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager"
+               allowExeDefinition="MachineToLocalUser"
+               requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+
+  <!-- Optional runtime switches go AFTER configSections -->
   <runtime>
     <AppContextSwitchOverrides value="Switch.System.Windows.DoNotScaleForDpiChanges=false" />
   </runtime>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="UnityLauncherPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-    <userSettings>
-        <UnityLauncherPro.Properties.Settings>
-            <setting name="windowWidth" serializeAs="String">
-                <value>600</value>
-            </setting>
-            <setting name="windowHeight" serializeAs="String">
-                <value>650</value>
-            </setting>
-            <setting name="minimizeToTaskbar" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="registerExplorerMenu" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="closeAfterProject" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="closeAfterExplorer" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="showArgumentsColumn" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="showGitBranchColumn" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="showProjectsMissingFolder" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AllowSingleInstanceOnly" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="preferredVersion" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="newProjectsRoot" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="askNameForQuickProject" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="enableProjectRename" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="streamerMode" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="showTargetPlatform" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="webglBuildPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="useCustomTheme" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="themeFile" serializeAs="String">
-                <value>theme.ini</value>
-            </setting>
-            <setting name="enablePlatformSelection" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="runAutomatically" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="useCustomLastModified" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="customDateFormat" serializeAs="String">
-                <value>dd/MM/yyyy HH:mm:ss</value>
-            </setting>
-            <setting name="useHumandFriendlyLastModified" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="runAutomaticallyMinimized" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="adbLogCatArgs" serializeAs="String">
-                <value>-s Unity ActivityManager PackageManager dalvikvm DEBUG -v color</value>
-            </setting>
-            <setting name="projectName" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="templatePackagesFolder" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="newProjectPlatform" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="searchProjectPathAlso" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="checkPlasticBranch" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="shortcutBatchFileFolder" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="rootFolders" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-                        <string>C:\Program Files\</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="customInitFile" serializeAs="String">
-                <value>InitializeProject.cs</value>
-            </setting>
-            <setting name="useInitScript" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="webglPort" serializeAs="String">
-                <value>50000</value>
-            </setting>
-            <setting name="projectPaths" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
-                </value>
-            </setting>
-            <setting name="override40ProjectCount" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="maxProjectCount" serializeAs="String">
-                <value>40</value>
-            </setting>
-        </UnityLauncherPro.Properties.Settings>
-    </userSettings>
+
+  <userSettings>
+    <UnityLauncherPro.Properties.Settings>
+      <setting name="windowWidth" serializeAs="String">
+        <value>600</value>
+      </setting>
+      <setting name="windowHeight" serializeAs="String">
+        <value>650</value>
+      </setting>
+      <setting name="minimizeToTaskbar" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="registerExplorerMenu" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="closeAfterProject" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="closeAfterExplorer" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="showArgumentsColumn" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="showGitBranchColumn" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="showProjectsMissingFolder" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AllowSingleInstanceOnly" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="preferredVersion" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="newProjectsRoot" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="askNameForQuickProject" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="enableProjectRename" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="streamerMode" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="showTargetPlatform" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="webglBuildPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="useCustomTheme" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="themeFile" serializeAs="String">
+        <value>theme.ini</value>
+      </setting>
+      <setting name="enablePlatformSelection" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="runAutomatically" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="useCustomLastModified" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="customDateFormat" serializeAs="String">
+        <value>dd/MM/yyyy HH:mm:ss</value>
+      </setting>
+      <setting name="useHumandFriendlyLastModified" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="runAutomaticallyMinimized" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="adbLogCatArgs" serializeAs="String">
+        <value>-s Unity ActivityManager PackageManager dalvikvm DEBUG -v color</value>
+      </setting>
+      <setting name="projectName" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="templatePackagesFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="newProjectPlatform" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="searchProjectPathAlso" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="checkPlasticBranch" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="shortcutBatchFileFolder" serializeAs="String">
+        <value />
+      </setting>
+
+      <!-- XML-serialized collections are OK on .NET 8 -->
+      <setting name="rootFolders" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <string>C:\Program Files\</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+
+      <setting name="customInitFile" serializeAs="String">
+        <value>InitializeProject.cs</value>
+      </setting>
+      <setting name="useInitScript" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="webglPort" serializeAs="String">
+        <value>50000</value>
+      </setting>
+      <setting name="projectPaths" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+        </value>
+      </setting>
+      <setting name="override40ProjectCount" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="maxProjectCount" serializeAs="String">
+        <value>40</value>
+      </setting>
+    </UnityLauncherPro.Properties.Settings>
+  </userSettings>
 </configuration>
