testing project thumbnail (loaded from ProjectSettings/icon.png, if exists) and displayed in projects Context menu #142

--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -85,6 +85,7 @@
     </ApplicationDefinition>
     <Compile Include="Converters\ReleaseDateConverter.cs" />
     <Compile Include="Converters\LastModifiedConverter.cs" />
+    <Compile Include="Converters\ThumbnailConverter.cs" />
     <Compile Include="Data\BuildReport.cs" />
     <Compile Include="Data\BuildReportItem.cs" />
     <Compile Include="Data\DownloadProgress.cs" />
