feature: finished Load Online Templates, add setting for auto fetch templates, add manual fetch button if auto-fetch disabled closes #147

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -163,5 +163,8 @@
     <Setting Name="forceDX11" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="fetchOnlineTemplates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
